# MS_Robotics_My_Projects

./: README.md
3DOF_Robotic_Arm-main/: README.md  Rbo_arm_test.py  trajectory_add_waypts.ipynb
Decision Tree Guesser/: Evaluate.ipynb  submit_A2.py
Humanoid/hum_a1/: CMakeLists.txt  Cmake.txt  package.xml
Humanoid/hum_a1/src/: p1_c.cpp  p2_c.cpp  p2v2_c.cpp  p3_c.cpp  p4_c.cpp
Humanoid/hum_a2/humanoid_1/: CMakeLists.txt
Humanoid/hum_a2/humanoid_1/src/: plt_imu.py  rnp_bag.cpp
ImageProcessing_VideoProcessing-main/Coefficient of Restitution by Video Processing/: Velocity_find.py
Inventory_Routing_Problem-main/: group 9 code.py  output_text.txt
Inventory_Routing_Problem-main/Cutting Stock Problem/: Additional_funcs.cpp  Main.cpp  externs.h  globals.h  input.txt  master.h
